MDEV-11175 - \H option does not replace localhost with a host name

Let \H issue host name when connected to localhost via TCP/IP.